# sergem_robocar

./: .gitignore  .gitmodules  README.md
catkin_ws/src/robocar_config/: CMakeLists.txt  camera_settings.yaml  package.xml  steering_translator.yaml
catkin_ws/src/robocar_config/src/: dynparam
doc/img/: sergem-robocar-diagram.drawio
scripts/: create_links_in_catkin_ws.sh  robocar.launch  robocar_record.launch  sergem_robocar.service  sergem_robocar_ui.service
web_ui/: dummy_script.py  dummy_script_failing.py  index.js  package-lock.json  package.json  processes.js
web_ui/static/: index.html
web_ui/static/js/: my_controller.js
