<?xml version="1.0"?>
<package format="2">
  <name>robocar_config</name>
  <version>0.0.0</version>
  <description>robocar_config</description>
  <maintainer email="sbmatyunin@gmail.com">SergeM</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
